# python-course

./: .README.txt.swp  .coverage  .gitignore  CODE.sh  Diamond.txt  ExercisesAndSolutions  GETTING_STARTED  Login_to_windows.txt  MiniProject  NOTES.txt  Pipfile  R.txt  README.txt  Untitled.ipynb  ZOOM TIMINGS  list_of_extensions  module_loads.txt  notebook1.ipynb  z  z.py  z3
CheatSheet/: _runme.py  classes.html  decorators.html  exceptions.html  functional.html  functions.html  index.html  numpy.html  styles.css  type_hints.html
Labs/: Exercises (Python).doc  Python Mini Project.docx
Level 1/: 01.leap_years.py  01.loops.py  02.arrays.py  02.loops.py  02.py  03.arrays.py  03.functions.py  04.dicts.py  04.functions.py  05.leap_years.py  06.plotting.py  07.data_analysis.py  07.meshgrid.py  08.nexus_files.py  08.unicode_variables.py  1.py  Exercises  README  arrays.py  calendar.xlsx  calendar_2024_06.xlsx  calendar_2026.xlsx  copilot.py  copilot.txt  data  demo.iris.py  demo.new_irises.py  demo.oxford_temperatures.py  demo.rice.py  demo4.py  demo5.py  demo6.py  dicts.py  ex1.py  loops.py  memory_graph.gv  placeholder.py  quiz.py
Level 2/: 01 Bytecode  02 Data Types  02 Lists and Tuples  03 Data Types  03 Dictionaries  03 Loops and If Statements  04 Classes  04 File IO  04 Functions  05 Functions  05 Module and Packages  06 Exception Handling  06 Functions  07 File IO  07 Regular Expressions  08 Introduction to Functional  08 ModulesAndPackages  09 Command Line Parameters  09 Pandas  10 Numpy  10 Python Image Library  13 Matplotlib  13 Subprocess  13 Threading  14 Subprocess  14 Subprocess Package  14 Threading  15 Comprehensions  16 Iterators and Generators  17 Lambdas  18 Matplotlib  21 Pillow  7001  Exercises  GETTING_STARTED  NumpySolutions  PandasSolutions  README  README.txt  Solutions  (+2 more)
Level 2B/: 7000  README  TODO
Level 3/: -04 Exception Handling  00Testing  01 Bytecode  02 Unicode  03 Decorators  03 More on Dictionaries  05 Inheritance  05 TypeHints  06 Numpy  07 Multiprocessing  08 Logging  09 AsyncIO  09 Functional Programming  11 Scientific Libraries  12 Attribute Lookup  12 Decorators  13 Threading  14 Advanced Language Techniques  15 Operator Overloading  16 Spreadsheets  17 Unicode  19 Regular Expressions  48 Bytecode  HarderLabs  Labs  X03 Functions  contents.txt  requirements.txt  z
Level 4/: 01 Iterators and Generators  01 Networking  02 Django  02 Flask  02_serial_read.py  03 PyTorch  05 Django  05 EPICS  05 JSON and XML  06 JSON and YAML  07 Serial  08 REST  1.basic_webapp-Copy1.ipynb  1.basic_webapp.ipynb  Level 4 Blurb  README  Untitled.ipynb  Untitled1.ipynb  djange-setup-database.ipynb  django-part-1.ipynb  django-part-2.ipynb  django-part2B.ipynb  django-part3.ipynb  django-setup.ipynb  z.ipynb
Resources/: mystyles.css  setup_styles.sh
miniforge_LICENSE at main · conda-forge_miniforge · GitHub_files/: app_assets_modules_github_behaviors_ajax-error_ts-app_assets_.js  app_assets_modules_github_behaviors_commenting_edit_ts-app_as.js  behaviors-04cb692355a6.js  code-menu-1c0aedc134b1.js  element-registry-8206a1f1fc89.js  github-ea73c9cb5377.css  github-elements-394f8eb34f19.js  global-0a3c53b9d1c2.css  keyboard-shortcuts-dialog-79d6a754ebf9.js  notifications-subscriptions-menu-57956eade845.js  primer-aaa714e5674d.css  primer-react-602097a4b0db.js  primer-react.0bfa9048425e305e0217.module.css  react-code-view-7ef3067691e7.js  react-code-view.a0633e3d36c876a6eaa1.module.css  react-core-a18127980111.js  react-lib-f1bca44e0926.js  sessions-730dca81d0a2.js  ui_packages_app-uuid_app-uuid_ts-ui_packages_document-metadat.js  ui_packages_aria-live_aria-live_ts-ui_packages_promise-with-r.js  wp-runtime-cf7cb32e25cc.js  (+14 more)
src/16 Scientific Libraries/01 Numpy/Cython-scikit-build-core/: CMakeLists.txt  README  build_install_and_run.py  build_install_and_test.py  cythonRoots.pyx  pyproject.toml
src/20 Extending and Embedding/Interfacing C and CPP with Python/03/: CMakeLists.txt  README  build_install_and_test.py  hello_goodbye.cpp  hello_goodbye_wrapper.cpp  setup.py
src/20 Extending and Embedding/Interfacing C and CPP with Python/03 Pybind11 with STL Example/: CMakeLists.txt  build_install_and_test.py  hello_goodbye.cpp  hello_goodbye.h  pyproject.toml
src/20 Extending and Embedding/Interfacing C and CPP with Python/03 Pybind11 with STL Example/TestFolder/: testit.py
src/20 Extending and Embedding/Interfacing C and CPP with Python/03 Pybind11 with STL Example/hello_goodbye_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/20 Extending and Embedding/Interfacing C and CPP with Python/03 Pybind11 with STL Example/src/: setup.py
src/20 Extending and Embedding/Interfacing C and CPP with Python/03/TestFolder/: testit.py
src/20 Extending and Embedding/Interfacing C and CPP with Python/03/hello_goodbye_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/20 Extension Modules/01 C Example/src/: setup.cfg  setup.py
src/20 Extension Modules/01 PyBind11 Example/: CMakeLists.txt  README  average.cpp  average.h  binding_code.cpp  build_install_test.py  build_shared_library.py  hello_goodbye.cpp  pyproject.toml
src/20 Extension Modules/02 Cython/: CMakeLists.txt  build_install_test.py  build_shared_library.py
src/20 Extension Modules/03 Cython Modern/: CMakeLists.txt  build_install_test.py  pyproject.toml  timings.py
src/20 Extension Modules/03 Cython Modern/scripts/: 01.build.py  02.install.py  06.uninstall.py  07.clean.py  MASTER.sh
(+3697 files in other folders)
