[metadata]
name = FibonacciPackage
version = FibonacciPackage.1.0
description = simple example
long_description = This is a simple example, to wrap up a C module
keywords = one, two
license = BSD 3-Clause License
author = CRS Enterprises Ltd,
author_email = seddon-software@keme.co.uk
maintainer = CRS Enterprises Ltd
maintainer_email = seddon-software@keme.co.uk
url = http://www.keme.co.uk/~seddon-software
download_url = local
classifiers = ["Developers", "Python Programming Course"]
platforms = linux
mymodule = Extension('fibonacci', sources = ['fibmodule.c'])
ext_modules = [mymodule])


[options]

[options.package_data]

[options.entry_points]

[options.extras_require]

[options.packages.find]

